syntax = "proto3";

package api;

// for grpc-gateway
import "google/api/annotations.proto";

// DownlinkQueue is the service managing the downlink data queue.
service DownlinkQueue {
    // Enqueue adds the given item to the queue.
    rpc Enqueue(EnqueueDownlinkQueueItemRequest) returns (EnqueueDownlinkQueueItemResponse) {
        option(google.api.http) = {
            post: "/api/downlinkQueue"
            body: "*"
        };
    }

    // Delete deletes an item from the queue.
    rpc Delete(DeleteDownlinkQeueueItemRequest) returns (DeleteDownlinkQueueItemResponse) {
        option(google.api.http) = {
            delete: "/api/downlinkQueue/{id}"
        };
    }

    // List lists the items in the queue for the given devEUI.
    rpc List(ListDownlinkQueueItemsRequest) returns (ListDownlinkQueueItemsResponse) {
        option(google.api.http) = {
            get: "/api/downlinkQueue/{devEUI}"
        };
    }
}

message EnqueueDownlinkQueueItemRequest {
    // hex encoded DevEUI
    string devEUI = 1;
	// random reference (used on ack notification)
	string reference = 2;
    // requires an ack from the node
    bool confirmed = 3;
    // FPort to be used
    uint32 fPort = 4;
    // base64 encoded data
    bytes data = 5;
}

message EnqueueDownlinkQueueItemResponse {}

message DeleteDownlinkQeueueItemRequest {
    // ID of the queue item
    int64 id = 1;
}

message DeleteDownlinkQueueItemResponse {}

message DownlinkQueueItem {
    // id of the queue item
    int64 id = 1;
    // hex encoded DevEUI
    string devEUI = 2;
	// random reference (used on ack notification)
	string reference = 3;
    // requires an ack from the node
    bool confirmed = 4;
    // the transmission is pending (waiting for an ack)
    bool pending = 5;
    // FPort to be used
    uint32 fPort = 6;
    // base64 encoded data
    bytes data = 7;   
}

message ListDownlinkQueueItemsRequest {
    // hex encoded DevEUI
    string devEUI = 1;
}

message ListDownlinkQueueItemsResponse {
    repeated DownlinkQueueItem items = 1;
}
